--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
           </ul>
           <a class="header__help" href="#">Пожаловаться</a>
         </nav>
-        <div class="header__menu">
-          <span class="header__menu-item"></span>
-        </div>
       </header>
 
       <!--Content-->
@@ -36,7 +33,7 @@
           <div class="section content__section">
             <p class="section__sign">Куда я поеду</p>
             <h1 class="section__title">
-              Куда я&nbsp;поеду сразу, как можно будет куда-то поехать
+              Куда я поеду сразу, как можно будет куда&#8209;то поехать
             </h1>
           </div>
           <img
@@ -107,9 +104,10 @@
                   это синее небо, я позову.
                 </p>
                 <p class="place__text">
-                  Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
-                  Чёрное-Чёрное море уеду я. Уеду я на Чёрное-Чёрное море, на
-                  Чёрное-Чёрное море, на Чёрное-Чёрное море.
+                  Уеду я на Чёрное&#8209;Чёрное море, на Чёрное&#8209;Чёрное
+                  море, на Чёрное&#8209;Чёрное море уеду я. Уеду я на
+                  Чёрное&#8209;Чёрное море, на Чёрное&#8209;Чёрное море, на
+                  Чёрное&#8209;Чёрное море.
                 </p>
                 <p class="place__text">Уеду я.</p>
               </div>
