feat: добавить бургер-меню

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <div class="page">
       <!--Header-->
       <header class="header page__header">
+        <input
+          id="header__menu-toggle"
+          type="checkbox"
+          class="header__menu-toggle"
+        />
+        <label class="header__menu" for="header__menu-toggle">
+          <span class="header__menu-item"></span>
+        </label>
         <nav class="header__navigation">
           <ul class="header__links">
             <li>
